src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Cases and Changes</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Internal Request</fullName>
        <description>Used for internal salesforce requests.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Closed - Created in JIRA</fullName>
        </values>
        <values>
            <fullName>Closed - Duplicate</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Review</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Waiting for Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Work Orders</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>Failed Send to Multiband</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending to Multiband</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AccessToNetwork__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Access to Network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &quot; &quot; &amp;  Account.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Almond_configured_w_SSID_contextmedia__c</fullName>
        <label>Almond configured w/ SSID &quot;contextmedia&quot;</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Almond_configured_w_password_cat10dog__c</fullName>
        <label>Almond configured w/ password &quot;cat10dog&quot;</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_ports_available__c</fullName>
        <label>Are ports available on clinic switch?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, send network switch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat5 already in place (WR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cat5 already in place (ER)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Day_Time_etc_for_Exam_Room__c</fullName>
        <label>Best Day/Time/etc for Exam Room</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Day_Time_etc_for_Install__c</fullName>
        <label>Best Day/Time/etc for Install WR</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMH_ID__c</fullName>
        <formula>Account.CMHID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMH ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_WO_Time_for_Case__c</fullName>
        <formula>/*Dates are good till the year 2020 */ 
IF( 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2003,4,6)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2003,10,26))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2004,4,4)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2004,10,31))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2005,4,3)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2005,10,30))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2006,4,2)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2006,10,29))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2007,3,11)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2007,11,4))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2008,3,9)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2008,11,2))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2009,3,8)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2009,11,1))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2010,3,14)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2010,11,7))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2011,3,13)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2011,11,6))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2012,3,11)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2012,11,4))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2013,3,10)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2013,11,3))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2014,3,9)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2014,11,2))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2015,3,8)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2015,11,1))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2016,3,13)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2016,11,6))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2017,3,12)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2017,11,5))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2018,3,11)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2018,11,4))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2019,3,10)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2019,11,3))) || 
(( DATEVALUE(LatestServiceDateEnd__c)&gt;= DATE(2020,3,8)) &amp;&amp; (DATEVALUE(LatestServiceDateEnd__c)&lt;= DATE(2020,11,1))) 
,(LatestServiceDateEnd__c - (OFFSET_DST_c__c/24)- 5/24),(LatestServiceDateEnd__c - (OFFSET_ST__c /24) - 6/24)) 
/* the above line calculates the offset for Central Time only */</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CM WO Time for Case</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Captive_portal_splash_page__c</fullName>
        <label>Captive portal/splash page on WiFi?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CeilingHeight__c</fullName>
        <label>Ceiling Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ceiling_Hgt_of_WR__c</fullName>
        <formula>Account.CeilingHgtofWR__c</formula>
        <label>Ceiling Hgt of WR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CharacteristicsCaptured__c</fullName>
        <label>Clinic Characteristics Captured</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, I captured and entered the clinic characteristics correctly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, they were already captured.  I did not need to add or change anything.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I decided not to do my job</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked In, Yes from the latest service date on a Work Orders Case.</description>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked Out, Yes from the latest service date on a Work Orders Case.</description>
        <label>Checked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CheckinTime__c</fullName>
        <label>Check-in Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CheckoutTime__c</fullName>
        <label>Check-out Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_manages_own_internet__c</fullName>
        <inlineHelpText>You do not need to talk to an IT person</inlineHelpText>
        <label>Who has internet info?</label>
        <picklist>
            <picklistValues>
                <fullName>Offices manages internet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT department - affiliated with practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT department - affiliated with hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT person - affiliated with practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party (explain in notes)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CompetitorSwap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Swap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_clinic_hrs_on_device_ex_M_F_9_5__c</fullName>
        <label>Confirm clinic hrs on device ex:M-F 9-5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Connectivity_Method_New__c</fullName>
        <label>Connectivity Method</label>
        <picklist>
            <picklistValues>
                <fullName>LAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verizon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wifi</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Connectivity_Method__c</fullName>
        <formula>IF( INCLUDES(Account.Connectivity_Method__c , &quot;Verizon&quot;), &quot;Verizon; &quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Account.Connectivity_Method__c , &quot;Sprint&quot;), &quot;Sprint; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.Connectivity_Method__c , &quot;LAN&quot;), &quot;LAN; &quot;, &quot;&quot;)
&amp;
IF( INCLUDES(Account.Connectivity_Method__c , &quot;Wifi&quot;), &quot;Wifi; &quot;, &quot;&quot;)</formula>
        <label>Connectivity Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHCP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DHCP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DNS_Server_Address_1__c</fullName>
        <label>DNS Server Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNS_Server_Address_2__c</fullName>
        <label>DNS Server Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_WiFi_Authentication_Required__c</fullName>
        <label>Daily WiFi Authentication Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dashboard_Player_Status__c</fullName>
        <description>Display the player in the dashboard</description>
        <inlineHelpText>Display the player status in the dashboard</inlineHelpText>
        <label>Dashboard Player Status</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Drop_Access_Exam_Rooms__c</fullName>
        <label>Data Drop Access (Exam Rooms)</label>
        <picklist>
            <picklistValues>
                <fullName>Drop Tile Ceiling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Availability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Drop_Access__c</fullName>
        <label>Data Drop Access (WR)</label>
        <picklist>
            <picklistValues>
                <fullName>Drop Tile Ceiling Throughout Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No availability</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DatePicturesReceived__c</fullName>
        <label>Date Pictures Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Initial_Operation__c</fullName>
        <formula>Account.Date_of_Initial_Operation_Tablets__c</formula>
        <label>Date of Initial Operation - Tablets</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DatescreenwentMIA__c</fullName>
        <label>Date screen went MIA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysMia__c</fullName>
        <formula>IF(IsClosed, DATEVALUE(ClosedDate) - (DatescreenwentMIA__c), TODAY() - (DatescreenwentMIA__c))</formula>
        <label>Days MIA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deliverables_Link__c</fullName>
        <label>Deliverables Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DescribeTPLinkLocation__c</fullName>
        <inlineHelpText>Describe TP Link location ex: behind TV:</inlineHelpText>
        <label>Describe TP Link location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Almond_location_ex_behind_TV__c</fullName>
        <inlineHelpText>Where is the Almond located: in a closet, behind the OM&apos;s desk, behind the TV, etc.</inlineHelpText>
        <label>Describe Almond location ex: behind TV</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiagsTestruninLandscape__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diags Test run in Landscape?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_tech_tidy_up_the_cords__c</fullName>
        <label>Did tech tidy up the cords?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>He did, but more cleanup is required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Display_Unit_Created_in_Broadsign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Unit Created in Broadsign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Unit_Creation_Date__c</fullName>
        <label>Display Unit Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dist_ER_to_internet_jack_or_router__c</fullName>
        <label>Dist ER to internet jack or router</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distance_from_DHN_to_Checkin__c</fullName>
        <formula>Account.DistancefromDHNtoCheckIn__c</formula>
        <label>Distance from DHN to Checkin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_questions_for_me__c</fullName>
        <label>Do you have any questions for me?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_WiFi_reach_to_exam_rooms__c</fullName>
        <label>Does WiFi reach to exam rooms</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, it is super strong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, send Almond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s really weak, send Almond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dynamic_Account_Owner__c</fullName>
        <description>Is formula is used by a Dynamic Listview.</description>
        <formula>IF(Account.OwnerId = $User.Id, &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Dynamic Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Case_Owner__c</fullName>
        <description>Field is being used by a Dynamic Listview.</description>
        <formula>IF(OwnerId = $User.Id, &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Dynamic Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Created_By_User__c</fullName>
        <description>Formula field is used by Dynamic Listview. It checks if the current logged in user is the one who created the record.</description>
        <formula>IF(CreatedById = $User.Id, &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Dynamic Created By User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERTOutletLockReasonNotInstalled__c</fullName>
        <label>ERT Outlet Lock - Reason Not Installed</label>
        <picklist>
            <picklistValues>
                <fullName>Clinic refused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incompatible outlet such as GFCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not included in shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech compliance</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrical_Outlet_near_requested_TV_loca__c</fullName>
        <label>Electrical Outlet near requested TV loc?</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;5 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not all TVs have an outlet nearby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional TVs are all within parameters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_Length_of_Cable_Run__c</fullName>
        <formula>Account.Est_Length_of_Cable_Run__c</formula>
        <label>Est Length of Cable Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Est_of_Chares_in_WR__c</fullName>
        <formula>Account.EstofChairsinWR__c</formula>
        <label>Est # of Chairs in WR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethernet_outlet_near_requested_TV_loc__c</fullName>
        <inlineHelpText>In Feet</inlineHelpText>
        <label>Dist from WR to internet jack or router</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Room_Outlet_near_requested_TV_loc__c</fullName>
        <label>Exam Room Outlet near requested TV loc?</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;5 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;10 feet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not all TVs have an outlet nearby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional TVs are all within parameters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field_Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field partner which is fulfilling the work order.</description>
        <label>Field Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No service provider contact was found for the provided search criteria.</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Provider</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firewall_was_configured__c</fullName>
        <formula>Account.Firewall_was_configured__c</formula>
        <label>Firewall was configured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gateway_IP_Address__c</fullName>
        <label>Gateway IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Good_to_Go_With_Equipment__c</fullName>
        <label>Good to Go With Work Order?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure, but confidence level is very high</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HasWifi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has WiFi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HoursVerified_ChangedifRequired__c</fullName>
        <label>Hours Verified &amp; Changed if Required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes, Hours Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, No Hours Change Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, I Chose Not to Do My Job</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_did_the_work_order_go_tod__c</fullName>
        <label>How did the (work order) go today?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Name__c</fullName>
        <label>IT Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Email_Address__c</fullName>
        <label>IT Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Phone_Number__c</fullName>
        <label>IT Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>If_No_distance_to_ethernet_outlet__c</fullName>
        <label>If No, distance to ethernet outlet?</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 10ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 10 ft but less than 25 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 25 ft but less than 100ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 100 ft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dont Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_no_will_traffic_through_a_proxy_serv__c</fullName>
        <label>Is outbound traffic blocked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_ports_not_accessible_can_ports_be_o__c</fullName>
        <label>Can IT open required ports if blocked?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InformedMemberpracticeofChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Informed Member Practice of Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Tablet_Playing__c</fullName>
        <label>Is Tablet Playing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Volume_at_a_good_level__c</fullName>
        <label>Is Volume at a good level?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_WiFi_Available__c</fullName>
        <label>Is WiFi Available?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_office_network_DHCP__c</fullName>
        <label>Is office network DHCP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dont Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LAN_Drop_Wallboard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LAN Drop Wallboard Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landscape__c</fullName>
        <description>Opens a landscape view of th player</description>
        <inlineHelpText>Opens a Landscape view of the player</inlineHelpText>
        <label>Landscape</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Last_battery_percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last battery percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestServiceDateEndOffset__c</fullName>
        <description>Used to build a time-based workflow rule which triggers after 30 minutes since time-based workflows do not allow fractions of hours.</description>
        <formula>LatestServiceDateEnd__c - 0.02073</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Service Date End - Offset</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestServiceDateEnd__c</fullName>
        <label>Latest Service Date - End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestServiceDateStart__c</fullName>
        <label>Latest Service Date - Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Comment__c</fullName>
        <label>Latest Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Note_Rich__c</fullName>
        <label>Latest Note</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MIACurrentStage__c</fullName>
        <label>MIA -  Current Stage</label>
        <picklist>
            <picklistValues>
                <fullName>[1] MSE Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[2] NetOps Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[3] Work Order - Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[4] Work Order - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[5] Acct Mngmt/Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[6] Long Term Issue/Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>